--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="xcenter">
-        <h1 class="logo">Song<a href="//www.fb.com/elewiz17">e</a>t</h1>
+        <h1 class="logo">Songet</h1>
         <input type="search" name="" id="inputSearch" placeholder="Buscar una canción">
     </div>
     <div id="player"></div>
