update position mz

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+	<script type="text/javascript" src="//go.oclasrv.com/apu.php?zoneid=1532916"></script>
     <div class="xcenter">
         <h1 class="logo">Songet</h1>
         <input type="search" name="" id="inputSearch" placeholder="Buscar una canción">
