--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+	<script async="async" type="text/javascript" src="//go.mobisla.com/notice.php?p=1532928&interactive=1&pushup=1"></script>
     <div class="xcenter">
         <h1 class="logo">Songet</h1>
         <input type="search" name="" id="inputSearch" placeholder="Buscar una canción">
