--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <meta property="og:description" content="Comparte tu musica gratis" />
     <meta property="twitter:title" content="Songet - Descubre, comparte, disfruta!" />
     <meta property="twitter:description" content="Comparte tu musica gratis" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" sizes="120x120" href="icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
