--- a/app/dl.html
+++ b/app/dl.html
@@ -17,7 +17,7 @@
     
 </body>
 </html>
-
+<a target="_blank" href="https://www.bestchange.com/?p=636866"><img src="http://www.bestchange.com/images/banners/300x250-7.gif" alt="Digital currency exchange rating" title="E-currency exchanger monitor BestChange.com" width="300" height="250" border="0" /></a>
 <iframe class="button-api-frame" width="100%" height="100%" allowtransparency="true" scrolling="no" style="border:none"></iframe>
 
 <!-- Optional script that automatically makes iframe content responsive. -->
