--- a/app/dl.html
+++ b/app/dl.html
@@ -12,14 +12,18 @@
             }
         });
     </script>
+    <style>
+        .banner-gif{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     
 </body>
 </html>
-<a target="_blank" href="https://www.bestchange.com/?p=636866"><img src="http://www.bestchange.com/images/banners/300x250-7.gif" alt="Digital currency exchange rating" title="E-currency exchanger monitor BestChange.com" width="300" height="250" border="0" /></a>
 <iframe class="button-api-frame" width="100%" height="100%" allowtransparency="true" scrolling="no" style="border:none"></iframe>
-
+<a class="banner-gif" target="_blank" href="https://www.bestchange.com/?p=636866"><img src="http://www.bestchange.com/images/banners/300x250-7.gif" alt="Digital currency exchange rating" title="E-currency exchanger monitor BestChange.com" width="300" height="250" border="0" /></a>
 <!-- Optional script that automatically makes iframe content responsive. -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.14/iframeResizer.min.js"></script>
 <script>iFrameResize({}, '.button-api-frame');</script>
