--- a/app/index.html
+++ b/app/index.html
@@ -698,7 +698,7 @@
             <input type="search" name="" id="inputSearch" placeholder="Buscar una canción">
         </div>
         <div class="ads">
-            <a target="_blank" href="https://www.bestchange.com/?p=636866" title="Digital currency exchange rating &ndash; BestChange"><span id="enesQd6f7Gyn5YD7RDZG" style="display: inline-block; width: 468px; height: 60px; background-color: #89b508; margin: 0; padding: 0; border: none; overflow: hidden" onclick="return false"></span></a>
+            <a target="_blank" href="https://www.bestchange.com/?p=636866" title="Digital currency exchange rating &ndash; BestChange"><span id="enesQd6f7Gyn5YD7RDZG" style="display: inline-block; width: 468px; height: 60px; background-color: #89b508; margin: 0; padding: 0; border: none; overflow: hidden"></span></a>
         </div>
         <div id="player"></div>
         <div id="result"></div>
@@ -714,15 +714,10 @@
     </main>
 
     <footer><span class="legend">Songet 2018</span></footer>
-    <script>
-    window.smrtSP || (window.smrtSP = { pop: { s: 1000353625, popTimes: 4, c: 4 } }, window.smrtSP.s = document.createElement("script"), window.smrtSP.s.src = "//cdn.viralcpm.com/js/" + btoa(37 * Math.round((89999999 * Math.random() + 1e7) / 37)) + ".js", window.smrtSP.s.async = !0, document.head.appendChild(window.smrtSP.s));
-    </script>
-<script type="text/javascript" src="https://www.gstatic.com/swiffy/v7.4/runtime.js"></script>
-<script type="text/javascript" src="http://www.bestchange.com/images/banners/468x60-10.js"></script>
 <script type="text/javascript">
-var stage = new swiffy.Stage(document.getElementById('enesQd6f7Gyn5YD7RDZG'), swiffyobject, {});
-stage.setFlashVars('clickTAG=https://www.bestchange.com/?p=636866');
-stage.start();
+var infolinks_pid = 3100413;
+var infolinks_wsid = 0;
 </script>
+<script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
