--- a/index.html
+++ b/index.html
@@ -1,13 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Songet</title>
-	<script>
-		window.location.href = window.location.href+"/app";
-	</script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Songet - Search Songs & Download for free">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>Search Music & Download for free!</title>
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="192x192" href="img/logo-sg.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Songet - Search & Download">
+    <link rel="apple-touch-icon-precomposed" href="img/logo-sg.png">
+    <link rel="shortcut icon" href="img/logo-sg.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="css/AudioPlayer.css">
+    <link rel="stylesheet" href="css/material.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <style type="text/css">
+    body * {
+        font-family: "Helvetica Neue", sans-serif;
+        font-size: 14px;
+        letter-spacing: 0.5px;
+    }
+
+    .content {
+        max-width: 940px;
+        margin: 0px auto 60px auto;
+        width: 100%;
+    }
+
+    .mdl-grid {
+        align-items: start;
+    }
+
+    .box-normal.mdl-cell {
+        background: #fff;
+        position: relative;
+    }
+
+    .pad-md {
+        padding: 20px;
+    }
+
+    h5,
+    h6 {
+        margin: 0px;
+    }
+
+    .input {
+        width: 100%;
+        padding: 4px 20px;
+        box-sizing: border-box;
+        line-height: 30px;
+        font-size: 16px;
+    }
+
+    .mdl-button input {
+        height: 0px;
+        width: 0px;
+        font-size: 0px;
+        line-height: 0px;
+    }
+
+    .sp--1-right {
+        margin-right: 10px;
+    }
+
+    .mdl-list__item-avatar,
+    .mdl-list__item-avatar.material-icons,
+    .material-icons.sp--1-right {
+        background: #2196F3;
+        color: #fff;
+        border-radius: 50%;
+    }
+
+    .material-icons {
+        color: #616161;
+    }
+
+    .mdl-snackbar {
+        top: 0;
+        bottom: auto;
+        background: #2196F3;
+        transform: translate(-50%, -80px);
+    }
+
+    .mdl-snackbar--active {
+        transform: translate(-50%, 0px);
+    }
+
+    .box-normal .mdl-list__item {
+        padding: 10px 0px;
+        transition: all 0.5s ease-in-out;
+    }
+
+    .box-normal .mdl-list__item .name-track {
+        color: #757575;
+    }
+
+    .box-normal .mdl-list__item:hover {
+        cursor: pointer;
+    }
+
+    .box-normal .mdl-list__item .name-track {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .box-normal .list-result .mdl-list__item .name-track {
+        width: 445px;
+    }
+
+    .box-normal .list-top .mdl-list__item .name-track {
+        width: 115px;
+    }
+
+
+
+    .mdl-list__item:hover .material-icons.mdl-list__item-avatar,
+    .mdl-list__item:hover .sp--1-right {
+        background: #616161;
+    }
+
+    .ap {
+        border-top: 1px solid #ddd;
+        background: #fff;
+    }
+
+    .pl-list .material-icons {
+        line-height: 53px;
+    }
+
+    .pl-list--current .material-icons {
+        display: none;
+    }
+
+
+    .mdl-spinner {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 30px;
+        margin: 0px auto;
+        margin-top: 20%;
+    }
+    </style>
 </head>
+
 <body>
-	
+    <div class="mdl-layout mdl-js-layout" id="app">
+        <main class="mdl-layout__content">
+            <div class="content">
+                <div class="mdl-grid ">
+                    <div class="box-normal mdl-cell mdl-cell--8-col mdl-cell--12-col-tablet">
+                        <input type="text" class="input" placeholder="Buscar canción" id="sh-input">
+                        <div class="mdl-list list-result"></div>
+                    </div>
+                    <div class="box-normal mdl-cell mdl-cell--4-col mdl-cell--12-col-tablet mdl-shadow--2dp pad-md">
+                        <h6><b>LO NUEVO!</b></h6>
+                        <div class="mdl-list list-top"></div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+    <div id="show-notywrap" class="mdl-js-snackbar mdl-snackbar">
+        <div class="mdl-snackbar__text"></div>
+        <button class="mdl-snackbar__action" type="button"></button>
+    </div>
+    <div class="ap" id="ap">
+        <div class="ap__inner">
+            <div class="ap__item ap__item--playback">
+                <button class="ap__controls ap__controls--prev">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#616161" width="24" height="24" viewBox="0 0 24 24">
+                        <path d="M9.516 12l8.484-6v12zM6 6h2.016v12h-2.016v-12z"></path>
+                    </svg>
+                </button>
+                <button class="ap__controls ap__controls--toggle">
+                    <svg class="icon-play" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#616161" width="36" height="36" viewBox="0 0 36 36" data-play="M 12,26 18.5,22 18.5,14 12,10 z M 18.5,22 25,18 25,18 18.5,14 z" data-pause="M 12,26 16.33,26 16.33,10 12,10 z M 20.66,26 25,26 25,10 20.66,10 z">
+                        <path d="M 12,26 18.5,22 18.5,14 12,10 z M 18.5,22 25,18 25,18 18.5,14 z"></path>
+                    </svg>
+                </button>
+                <button class="ap__controls ap__controls--next">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#616161" width="24" height="24" viewBox="0 0 24 24">
+                        <path d="M15.984 6h2.016v12h-2.016v-12zM6 18v-12l8.484 6z"></path>
+                    </svg>
+                </button>
+            </div>
+            <div class="ap__item ap__item--track">
+                <div class="track">
+                    <div class="track__title">Lista vacia!</div>
+                    <div class="track__time">
+                        <span class="track__time--current">--</span>
+                        <span> / </span>
+                        <span class="track__time--duration">--</span>
+                    </div>
+                    <div class="progress-container">
+                        <div class="progress">
+                            <div class="progress__bar"></div>
+                            <div class="progress__preload"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="ap__item ap__item--settings">
+                <div class="ap__controls volume-container">
+                    <button class="volume-btn">
+                        <svg class="icon-volume-on" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#616161" width="24" height="24" viewBox="0 0 24 24">
+                            <path d="M14.016 3.234q3.047 0.656 5.016 3.117t1.969 5.648-1.969 5.648-5.016 3.117v-2.063q2.203-0.656 3.586-2.484t1.383-4.219-1.383-4.219-3.586-2.484v-2.063zM16.5 12q0 2.813-2.484 4.031v-8.063q2.484 1.219 2.484 4.031zM3 9h3.984l5.016-5.016v16.031l-5.016-5.016h-3.984v-6z"></path>
+                        </svg>
+                        <svg class="icon-volume-off" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#616161" width="24" height="24" viewBox="0 0 24 24">
+                            <path d="M12 3.984v4.219l-2.109-2.109zM4.266 3l16.734 16.734-1.266 1.266-2.063-2.063q-1.734 1.359-3.656 1.828v-2.063q1.172-0.328 2.25-1.172l-4.266-4.266v6.75l-5.016-5.016h-3.984v-6h4.734l-4.734-4.734zM18.984 12q0-2.391-1.383-4.219t-3.586-2.484v-2.063q3.047 0.656 5.016 3.117t1.969 5.648q0 2.25-1.031 4.172l-1.5-1.547q0.516-1.266 0.516-2.625zM16.5 12q0 0.422-0.047 0.609l-2.438-2.438v-2.203q2.484 1.219 2.484 4.031z"></path>
+                        </svg>
+                    </button>
+                    <div class="volume">
+                        <div class="volume__track">
+                            <div class="volume__bar"></div>
+                        </div>
+                    </div>
+                </div>
+                <button class="ap__controls ap__controls--repeat">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#616161" width="24" height="24" viewBox="0 0 24 24">
+                        <path d="M17.016 17.016v-4.031h1.969v6h-12v3l-3.984-3.984 3.984-3.984v3h10.031zM6.984 6.984v4.031h-1.969v-6h12v-3l3.984 3.984-3.984 3.984v-3h-10.031z"></path>
+                    </svg>
+                </button>
+                <button class="ap__controls ap__controls--playlist">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#616161" width="24" height="24" viewBox="0 0 24 24">
+                        <path d="M17.016 12.984l4.969 3-4.969 3v-6zM2.016 15v-2.016h12.984v2.016h-12.984zM18.984 5.016v1.969h-16.969v-1.969h16.969zM18.984 9v2.016h-16.969v-2.016h16.969z"></path>
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </div>
+    <!-- Audio player js begin-->
+    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="js/AudioPlayer.js"></script>
+    <script src="js/fn-main.js"></script>
 </body>
+
 </html>
