--- a/index.html
+++ b/index.html
@@ -147,6 +147,13 @@
         margin: 0px auto;
         margin-top: 20%;
     }
+
+    @media (max-width: 479px) {
+        .box-normal .list-result .mdl-list__item .name-track {
+            white-space: normal;
+            width: auto;
+        }
+    }
     </style>
 </head>
 
