--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     }
 
     @media (max-width: 479px) {
-        .box-normal .list-result .mdl-list__item .name-track {
+        .box-normal .mdl-list__item .name-track {
             white-space: normal;
             width: auto;
         }
