--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     @media (max-width: 479px) {
         .box-normal .mdl-list__item .name-track {
             white-space: normal;
-            width: auto;
+            width: auto !important;
         }
     }
     </style>
