--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
             white-space: normal;
             width: auto !important;
         }
+        .mdl-snackbar{
+            left: 50%;
+        }
     }
     </style>
 </head>
@@ -171,12 +174,12 @@
                         <div class="mdl-list list-top"></div>
                     </div>
                 </div>
+                <div id="show-notywrap" class="mdl-js-snackbar mdl-snackbar">
+                    <div class="mdl-snackbar__text"></div>
+                    <button class="mdl-snackbar__action" type="button"></button>
+                </div>
             </div>
         </main>
-    </div>
-    <div id="show-notywrap" class="mdl-js-snackbar mdl-snackbar">
-        <div class="mdl-snackbar__text"></div>
-        <button class="mdl-snackbar__action" type="button"></button>
     </div>
     <div class="ap" id="ap">
         <div class="ap__inner">
