--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <base href="https://www.youtubeconvert.cc/" target="_blank">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script type="text/javascript">
     var ajaxUrlBase = '//youtubeconvert.cc/';
