--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="apple-mobile-web-app-title" content="Songet - Search & Download">
     <link rel="apple-touch-icon-precomposed" href="img/logo-sg.png">
     <link rel="shortcut icon" href="img/logo-sg.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="css/AudioPlayer.css">
     <link rel="stylesheet" href="css/material.min.css">
@@ -22,7 +23,25 @@
     body * {
         font-family: "Helvetica Neue", sans-serif;
         font-size: 14px;
+        line-height: 15px;
         letter-spacing: 0.5px;
+    }
+
+    body a img{
+        max-width: 100%;
+        width: 100%;
+        height: 100%
+    }
+
+    h1.logo {
+        font-family: 'Monoton', cursive;
+        font-size: 46px;
+        text-align: center;
+        color: #2196F3;
+        margin: 60px 0px 10px 0px;
+        font-weight: normal;
+        letter-spacing: -2px;
+        line-height: 40px;
     }
 
     .content {
@@ -78,6 +97,10 @@
 
     .material-icons {
         color: #616161;
+    }
+
+    .mdl-button .material-icons:hover {
+        color: #2196F3;
     }
 
     .mdl-snackbar {
@@ -153,9 +176,26 @@
             white-space: normal;
             width: auto !important;
         }
-        .mdl-snackbar{
+        .mdl-snackbar {
             left: 50%;
         }
+    }
+
+    .mdl-progress {
+        width: 10%;
+        margin: 0px auto;
+        position: absolute;
+        left: 45%;
+    }
+
+    .mdl-progress>.progressbar {
+        background-color: #2196F3 !important;
+    }
+
+    .mdl-progress>.bufferbar,
+    .mdl-progress>.auxbar {
+        background: none !important;
+        background-color: #fff !important;
     }
     </style>
 </head>
@@ -163,15 +203,18 @@
 <body>
     <div class="mdl-layout mdl-js-layout" id="app">
         <main class="mdl-layout__content">
+            <h1 class="logo">Songet</h1>
             <div class="content">
                 <div class="mdl-grid ">
                     <div class="box-normal mdl-cell mdl-cell--8-col mdl-cell--12-col-tablet">
                         <input type="text" class="input" placeholder="Buscar canción" id="sh-input">
                         <div class="mdl-list list-result"></div>
+                        <a target="_blank" href="https://www.bestchange.com/?p=636866"><img src="http://www.bestchange.com/images/banners/468x60-16.gif" alt="E-money exchange listing" title="E-currency exchanger monitor BestChange.com" width="468" height="60" border="0" /></a>
                     </div>
                     <div class="box-normal mdl-cell mdl-cell--4-col mdl-cell--12-col-tablet mdl-shadow--2dp pad-md">
                         <h6><b>LO NUEVO!</b></h6>
                         <div class="mdl-list list-top"></div>
+                        <a target="_blank" href="https://www.bestchange.com/?p=636866"><img src="http://www.bestchange.com/images/banners/240x400-10.gif" alt="E-money exchange listing" title="E-currency exchanger monitor BestChange.com" width="240" height="400" border="0" /></a>
                     </div>
                 </div>
                 <div id="show-notywrap" class="mdl-js-snackbar mdl-snackbar">
