--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="css/AudioPlayer.css">
     <link rel="stylesheet" href="css/material.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js?beta=1.0.1"></script>
     <style type="text/css">
     body * {
         font-family: "Helvetica Neue", sans-serif;
@@ -290,8 +290,8 @@
     </div>
     <!-- Audio player js begin-->
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script src="js/AudioPlayer.js"></script>
-    <script src="js/fn-main.js"></script>
+    <script src="js/AudioPlayer.js?beta=1.0.1"></script>
+    <script src="js/fn-main.js?beta=1.0.1"></script>
 </body>
 
 </html>
