--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             </div>
             <div class="ap__item ap__item--track">
                 <div class="track">
-                    <div class="track__title">Lista vacia!</div>
+                    <div class="track__title">Su lista está vacia!</div>
                     <div class="track__time">
                         <span class="track__time--current">--</span>
                         <span> / </span>
