--- a/index.html
+++ b/index.html
@@ -178,6 +178,14 @@
         .mdl-snackbar {
             left: 50%;
         }
+        .mdl-progress {
+            top: 0px;
+            right: auto;
+            left: auto;
+            width: 100%;
+            height: 3px;
+            bottom: auto;
+        }
     }
 
     @media (min-width: 480px) {
@@ -206,7 +214,7 @@
         background-color: #fff !important;
     }
 
-    .mdl-snackbar__text{
+    .mdl-snackbar__text {
         padding: 14px 0px;
     }
 
@@ -214,6 +222,10 @@
         line-height: 43px;
         padding: 0px 10px;
         color: #fff;
+    }
+
+    .btn-js-add{
+        display: none;
     }
     </style>
 </head>
