--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@
 
     .input {
         width: 100%;
-        padding: 4px 20px;
+        padding: 0px 10px;
         box-sizing: border-box;
         line-height: 30px;
         font-size: 16px;
+        outline: none;
     }
 
     .mdl-button input {
@@ -179,12 +180,11 @@
             left: 50%;
         }
         .mdl-progress {
-            top: 0px;
-            right: auto;
+            width: 100% !important;
+            right: auto !important;
+            bottom: auto !important;
             left: auto;
-            width: 100%;
-            height: 3px;
-            bottom: auto;
+            top: 0px;
         }
     }
 
@@ -224,7 +224,7 @@
         color: #fff;
     }
 
-    .btn-js-add{
+    .btn-js-add {
         display: none;
     }
     </style>
@@ -237,7 +237,7 @@
             <div class="content">
                 <div class="mdl-grid ">
                     <div class="box-normal mdl-cell mdl-cell--8-col mdl-cell--12-col-tablet">
-                        <input type="text" class="input" placeholder="Buscar canción" id="sh-input">
+                        <input type="text" class="input" placeholder="Buscar artista/canción" id="sh-input">
                         <div class="mdl-list list-result"></div>
                         <a target="_blank" href="https://www.bestchange.com/?p=636866"><img src="http://www.bestchange.com/images/banners/468x60-16.gif" alt="E-money exchange listing" title="E-currency exchanger monitor BestChange.com" width="468" height="60" border="0" /></a>
                     </div>
