--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     }
 
     .content {
-        max-width: 940px;
+        max-width: 1060px;
         margin: 0px auto 60px auto;
         width: 100%;
     }
@@ -60,21 +60,27 @@
     }
 
     .pad-md {
-        padding: 20px;
+        padding: 15px;
+        border: 1px solid #ddd;
+        border-left: 5px solid #ddd;
     }
 
     h5,
     h6 {
         margin: 0px;
+        color: #616161;
     }
 
     .input {
         width: 100%;
         padding: 0px 10px;
         box-sizing: border-box;
-        line-height: 30px;
+        line-height: 40px;
         font-size: 16px;
         outline: none;
+        box-shadow: none;
+        border: 1px solid #ddd;
+        margin-bottom: 5px;
     }
 
     .mdl-button input {
@@ -129,20 +135,17 @@
     }
 
     .box-normal .mdl-list__item .name-track {
-        white-space: nowrap;
         overflow: hidden;
+        padding-right: 0px;
+        cursor: pointer;
+        text-align: left;
+        white-space: nowrap;
         text-overflow: ellipsis;
     }
 
-    .box-normal .list-result .mdl-list__item .name-track {
-        width: 445px;
+    .mdl-list__item .mdl-list__item-primary-content {
+        min-width: 155px;
     }
-
-    .box-normal .list-top .mdl-list__item .name-track {
-        width: 115px;
-    }
-
-
 
     .mdl-list__item:hover .material-icons.mdl-list__item-avatar,
     .mdl-list__item:hover .sp--1-right {
@@ -156,6 +159,7 @@
 
     .pl-list .material-icons {
         line-height: 53px;
+        color: #2196F3;
     }
 
     .pl-list--current .material-icons {
@@ -171,7 +175,7 @@
         margin: 20% auto;
     }
 
-    @media (max-width: 479px) {
+    @media only screen and (max-width: 479px) {
         .box-normal .mdl-list__item .name-track {
             white-space: normal;
             width: auto !important;
@@ -186,6 +190,26 @@
             left: auto;
             top: 0px;
         }
+        .mdl-list__item .mdl-list__item-primary-content {
+            min-width: 155px;
+        }
+        .pl-ul {
+            width: 100%;
+            padding: 0px;
+            max-width: 98%;
+            right: 0px;
+            left: 0px;
+            bottom: 15%;
+        }
+        .pad-md {
+            order: 1;
+        }
+    }
+
+    @media only screen and (max-width: 768px) {
+        .mdl-list__item .mdl-list__item-primary-content {
+            max-width: 100%;
+        }
     }
 
     @media (min-width: 480px) {
@@ -197,11 +221,13 @@
     }
 
     .mdl-progress {
-        width: 10%;
+        width: 24%;
         margin: 0px auto;
         position: fixed;
-        right: 45px;
-        bottom: 60px;
+        left: 12%;
+        top: 17%;
+        z-index: 10;
+        background: transparent;
     }
 
     .mdl-progress>.progressbar {
@@ -211,7 +237,6 @@
     .mdl-progress>.bufferbar,
     .mdl-progress>.auxbar {
         background: none !important;
-        background-color: #fff !important;
     }
 
     .mdl-snackbar__text {
@@ -224,8 +249,31 @@
         color: #fff;
     }
 
-    .btn-js-add {
-        display: none;
+    .pl-ul {
+        margin: 1% auto 4.5% auto;
+        padding: 1%;
+        border: 1px solid #ddd;
+        border-top: 5px solid #ddd;
+        position: fixed;
+        right: 2%;
+        top: auto;
+        bottom: 0px;
+        height: 495px;
+        min-height: 200px;
+        background: #fff;
+        overflow: auto;
+        max-width: 375px;
+        box-shadow: none;
+    }
+
+    .pl-container {
+        background: none;
+        overflow: hidden;
+        top: 10px;
+        right: 1%;
+        bottom: 0px;
+        left: auto;
+        z-index: 10;
     }
     </style>
 </head>
@@ -236,15 +284,14 @@
             <h1 class="logo">Songet</h1>
             <div class="content">
                 <div class="mdl-grid ">
-                    <div class="box-normal mdl-cell mdl-cell--8-col mdl-cell--12-col-tablet">
-                        <input type="text" class="input" placeholder="Buscar artista/canción" id="sh-input">
-                        <div class="mdl-list list-result"></div>
-                        <a target="_blank" href="https://www.bestchange.com/?p=636866"><img src="http://www.bestchange.com/images/banners/468x60-16.gif" alt="E-money exchange listing" title="E-currency exchanger monitor BestChange.com" width="468" height="60" border="0" /></a>
-                    </div>
-                    <div class="box-normal mdl-cell mdl-cell--4-col mdl-cell--12-col-tablet mdl-shadow--2dp pad-md">
+                    <div class="box-normal mdl-cell mdl-cell--4-col mdl-cell--12-col-tablet pad-md">
                         <h6><b>LO NUEVO!</b></h6>
                         <div class="mdl-list list-top"></div>
-                        <a target="_blank" href="https://www.bestchange.com/?p=636866"><img src="http://www.bestchange.com/images/banners/240x400-10.gif" alt="E-money exchange listing" title="E-currency exchanger monitor BestChange.com" width="240" height="400" border="0" /></a>
+                    </div>
+                    <div class="box-normal mdl-cell mdl-cell--8-col mdl-cell--12-col-tablet">
+                        <input type="text" class="input" placeholder="Buscar artista/canción" id="sh-input">
+                        <a target="_blank" href="https://www.bestchange.com/?p=636866"><img src="http://www.bestchange.com/images/banners/468x60-16.gif" alt="E-money exchange listing" title="E-currency exchanger monitor BestChange.com" width="468" height="60" border="0" /></a>
+                        <div class="mdl-list list-result"></div>
                     </div>
                 </div>
                 <div id="show-notywrap" class="mdl-js-snackbar mdl-snackbar">
