--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Songet - Search Songs & Download for free">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Search Music & Download for free!</title>
+    <title>Songet - Musica de YT sin anuncios!</title>
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" sizes="192x192" href="img/logo-sg.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Songet - Search & Download">
+    <meta name="apple-mobile-web-app-title" content="Songet - Musica de YT sin anuncios!">
     <link rel="apple-touch-icon-precomposed" href="img/logo-sg.png">
     <link rel="shortcut icon" href="img/logo-sg.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
@@ -223,7 +222,7 @@
     .mdl-progress {
         width: 24%;
         margin: 0px auto;
-        position: fixed;
+        position: absolute;
         left: 12%;
         top: 17%;
         z-index: 10;
@@ -371,5 +370,4 @@
     <script src="js/AudioPlayer.js?beta=1.0.1"></script>
     <script src="js/fn-main.js?beta=1.0.1"></script>
 </body>
-
 </html>
